--- a/Makefile32
+++ b/Makefile32
@@ -1,37 +1,4 @@
+
+CFLAGS_DIST=-m32 
+DIR_SUFFIX=32
 -include Makefile-common
-CFLAGS32=-m32 $(CFLAGS)
-
-LDFLAGS32=-m32 $(LDFLAGS)
-
-OBJS32=$(patsubst %,$(OBJDIR32)/%,$(OBJ_FILE_NAMES))
-
-OBJDIR32 = obj32
-DISTDIR32 = dist32
-
-SHARE_LIBRARY_TARGET32 = $(DISTDIR32)/$(SHARE_LIBRARY_TARGET)
-
-
-$(OBJDIR32)/%.o : %.c
-	mkdir -p $(OBJDIR32); \
-	mkdir -p $(DISTDIR32); \
-	mkdir -p $(DEPDIR); \
-	$(MAKEDEPEND); \
-	sed -e 's/\(^[^:\.o \t]\)/$(OBJDIR32)\/\1/' < $*.d > $(DEPDIR)/$*.P; \
-	sed -e 's/#.*//' -e 's/^[^:]*: *//' -e 's/ *\\$$//' -e '/^$$/ d' -e 's/$$/ :/' -e  's/\(^[^:.o \t]*\.o: .*\)/$(OBJDIR32)\/\1/' < $*.d >> $(DEPDIR)/$*.P; \
-	$(COMPILE.c) -m32 -o $@ $<; \
-	rm -f $*.d;
-
-$(SHARE_LIBRARY_TARGET32): $(OBJS32)
-	mkdir -p $(DISTDIR32); 
-	$(CC) $(CFLAGS32) -o $@ -shared $(OBJS32) 
-
-$(DISTDIR32)/test: $(UNIT_TEST_SRC) $(SHARE_LIBRARY_TARGET32)
-	$(CC) $(CFLAGS32) $(LDFLAGS32) -Wl,-rpath=./dist32/  -DUNIT_TEST -o $@ $< $(SHARE_LIBRARY_TARGET32)
-
-.PHONY: run clean
-run32: $(DISTDIR32)/test
-	./$(DISTDIR32)/test
-run: run32 
-
-clean:clean-common
-	rm -rf $(OBJDIR32) $(SHARE_LIBRARY_TARGET32)
