--- a/Makefile-common
+++ b/Makefile-common
@@ -29,8 +29,19 @@ UNIT_TEST_OBJS=$(patsubst %,$(OBJDIR)/%,$(UNIT_TEST_FILE_NAMES_OBJ))
 
 all: run
 -include $(INCLUDES)
+$(OBJDIR)/mock.o : mock.c 
+	mkdir -p $(OBJDIR); \
+	mkdir -p $(DISTDIR); \
+	mkdir -p $(DEPDIR); \
+	$(MAKEDEPEND); \
+	sed -e 's/\(^[^:\.o \t]\)/$(OBJDIR)\/\1/' < $*.d > $(DEPDIR)/$*.P; \
+	sed -e 's/#.*//' -e 's/^[^:]*: *//' -e 's/ *\\$$//' -e '/^$$/ d' -e 's/$$/ :/' -e  's/\(^[^:.o \t]*\.o: .*\)/$(OBJDIR)\/\1/' < $*.d >> $(DEPDIR)/$*.P; \
+	$(COMPILE.c) $(CFLAGS) -o $@ $<; \
+	rm -f $*.d;
 
-$(OBJDIR)/test.o : test.c
+
+
+$(OBJDIR)/test.o : test.c 
 	mkdir -p $(OBJDIR); \
 	mkdir -p $(DISTDIR); \
 	mkdir -p $(DEPDIR); \
@@ -50,8 +61,8 @@ $(OBJDIR)/testpp.o : testpp.cpp
 	$(COMPILE.c) $(CFLAGS) -o $@ $<; \
 	rm -f $*.d;
 
-$(DISTDIR)/test: $(UNIT_TEST_OBJS) $(SHARE_LIBRARY_TARGET)
-	$(CC) $(CFLAGS) $(LDFLAGS) -Wl,-rpath=./$(DISTDIR)/  -DUNIT_TEST -o $@ $< $(SHARE_LIBRARY_TARGET)
+$(DISTDIR)/test: $(UNIT_TEST_OBJS) $(SHARE_LIBRARY_TARGET) obj/testpp.o
+	$(CC) $(CFLAGS) $(LDFLAGS) -Wl,-rpath=./$(DISTDIR)/  -DUNIT_TEST -o $@ $< $(SHARE_LIBRARY_TARGET) obj/testpp.o
 
 
 $(SHARE_LIBRARY_TARGET): $(OBJS)
