--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,15 +49,15 @@ if (PKG_CONFIG_FOUND)
 
 		set(CMAKE_CXX_LINK_EXECUTABLE "<CMAKE_CXX_COMPILER>  <FLAGS> <LINK_FLAGS> <OBJECTS>  -o <TARGET> <LINK_LIBRARIES> <CMAKE_CXX_LINK_FLAGS> ")
 		set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_C_COMPILER>  <FLAGS> <LINK_FLAGS> <OBJECTS>  -o <TARGET> <LINK_LIBRARIES> <CMAKE_C_LINK_FLAGS> ")
-		add_executable(test test.c testpp.cpp) 
-		set_target_properties(test PROPERTIES CMAKE_C_LINK_FLAGS "${CMAKE_C_FLAGS} -DUNIT_TEST")
-		set_target_properties(test PROPERTIES CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_FLAGS}  -DUNIT_TEST")
-		target_link_libraries(test ExtremeCMock dl stdc++)
+		add_executable(extremecmock_test test.c testpp.cpp) 
+		set_target_properties(extremecmock_test PROPERTIES CMAKE_C_LINK_FLAGS "${CMAKE_C_FLAGS} -DUNIT_TEST")
+		set_target_properties(extremecmock_test PROPERTIES CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_FLAGS}  -DUNIT_TEST")
+		target_link_libraries(extremecmock_test ExtremeCMock dl stdc++)
 
-		add_custom_target(run ./test)
-		add_custom_target(runv ./test -v)
-		ADD_DEPENDENCIES(run test)
-		ADD_DEPENDENCIES(runv test)
+		add_custom_target(run ./extremecmock_test)
+		add_custom_target(runv ./extremecmock_test -v)
+		ADD_DEPENDENCIES(run extremecmock_test)
+		ADD_DEPENDENCIES(runv extremecmock_test)
 	else (EXTREMECUNIT_LDFLAGS)
 		message("ExtremeCUNIT not found/installed. Unittest will not be built")
 	endif(EXTREMECUNIT_LDFLAGS)
