--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .dep/
 obj*/
 dist*/
-
 CMakeCache.txt
 CMakeFiles
 ExtremeCMock.pc
@@ -9,3 +8,4 @@ Makefile
 cmake_install.cmake
 extremecmock_test
 libExtremeCMock.so
+time_mock
